--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.15.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql": "2.18.1",
