--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@auth0/auth0-spa-js": "^1.15.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "jwks-rsa": "^2.0.3",
     "mysql": "2.18.1",
     "nodemon": "^1.19.1",
     "pg": "^8.6.0",
