--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.15.0",
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.3",
     "mysql": "2.18.1",
     "nodemon": "^1.19.1",
