removing more auth

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ MYSQL_SSL = {rejectUnauthorized:false};
 AUTH0_CLIENT_ID = 'fJsUaFkKFRKpeyqwt3ghgYZY8LpyZmQN';
 AUTH0_IDENTITY = 'kryptonian.us.auth0.com';
 AUTH0_CLIENT_SECRET = 'pitme7OqlE5AE16ie-fgg8aONZwa07Oxb6sDIobL5CV86Gvm7HL1bSg74Xz4_n8_';
+JWT_SECRET = '';
