--- a/.env
+++ b/.env
@@ -7,4 +7,53 @@ MYSQL_SSL = {rejectUnauthorized:false};
 AUTH0_CLIENT_ID = 'fJsUaFkKFRKpeyqwt3ghgYZY8LpyZmQN';
 AUTH0_IDENTITY = 'kryptonian.us.auth0.com';
 AUTH0_CLIENT_SECRET = 'pitme7OqlE5AE16ie-fgg8aONZwa07Oxb6sDIobL5CV86Gvm7HL1bSg74Xz4_n8_';
-JWT_SECRET = '';
+JWT_SECRET = ''; 
+
+
+use bidpros;
+
+CREATE TABLE users (
+	user_id int NOT NULL AUTO_INCREMENT PRIMARY KEY,
+    first_name varchar(30),
+    last_name varchar(30),
+    city varchar(30),
+    email varchar(40)
+    );
+    
+CREATE TABLE events (
+	event_id int SERIAL PRIMARY KEY
+    event_name varchar(50),
+    event_host varchar(50),
+    event_date date
+    );
+
+CREATE TABLE usertype (
+	usertype_id SERIAL PRIMARY KEY,
+	user_id int,
+    event_id int,
+    admin boolean,
+    FOREIGN KEY (user_id) REFERENCES users(user_id),
+    FOREIGN KEY (event_id) REFERENCES events(event_id)
+    );
+    
+CREATE TABLE items (
+	item_id SERIAL PRIMARY KEY,
+    item_name varchar(75),
+    item_desc varchar(200),
+    item_open boolean,
+    item_donor varchar(75),
+    event_id int,
+    FOREIGN KEY (event_id) REFERENCES events(event_id),
+    bid_id int,
+    FOREIGN KEY (bid_id) REFERENCES bids(bid_id)
+    );
+    
+CREATE TABLE bids (
+	bid_id SERIAL PRIMARY KEY,
+    bid_amt int,
+    item_id int,
+    FOREIGN KEY (item_id) REFERENCES items(item_id),
+    user_id int,
+    FOREIGN KEY (user_id) REFERENCES users(user_id),
+    timestamp int
+    );
