--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.3",
+    "mongodb": "^4.1.0",
     "mongoose": "^5.13.4",
     "mysql": "2.18.1",
     "nodemon": "^1.19.1",
+    "path": "^0.12.7",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2"
